refactor: 메뉴 생성, 메뉴 가격 수정 기능 리팩토링